    - Updated German translation (de.po)
  * Bart Cornelis
    - Updated Dutch translation (nl.po)
  * Steinar H. Gunderson
    - Updated Norwegian translation (nb.po).
  * Otavio Salvador
    - Change priority of question about disc to 'critical'. 
      Closes: #220258
    - Fix a trivial spell error in pt_BR translation.
    - Fixed to not call the partitioner tool without a disk select.

 -- Bart Cornelis <cobaco@linux.be>  Fri, 19 Dec 2003 17:28:04 +0100

partitioner (0.13) unstable; urgency=low

  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Ilgiz Kalmetev
    - Initial Russian translation.
  * Konstantinos Margaritis
    - Initial Greek translation (el.po).
  * Christian Perrier
    - Refined and standardized templates. Closes: #220026
    - Update French translation.
  * Claus Hindsgaul
    - Add Danish translation (da.po).
  * Safir Šećerović
    - Update Bosnian translation (bs.po)
  * Tommi Vainikainen
    - Update Finnish translation.
  * Miroslav Kure
    - Update Czech translation.
  * Jordi Mallach
    - Update Catalan translation.
  * Kenshi Muto
    - Update Japaense po (ja.po)
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Kęstutis Biliūnas 
    - Update Lithuanian translation.
 	
 -- Joey Hess <joeyh@debian.org>  Tue,  9 Dec 2003 16:06:20 -0500

partitioner (0.12) unstable; urgency=low

  * Safir Secerovic, Amila Akagic
    - Add Bosnian translation (bs.po)

 -- Joey Hess <joeyh@debian.org>  Fri,  7 Nov 2003 13:31:46 -0500

partitioner (0.11) unstable; urgency=low

  * Gaudenz Steinlin
    - scripts/powerpc: replace /usr/bin/archdetect with /bin/archdetect

 -- Petter Reinholdtsen <pere@debian.org>  Sat,  1 Nov 2003 12:38:53 +0100

partitioner (0.10) unstable; urgency=low

  * Alastair McKinstry
    - Added versioned depends on libdebconfclient-dev to ensure we get
      working debonf_* macros.
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Denis Barbier