@@ -21,6 +21,8 @@ partitioner (0.14) UNRELEASED; urgency=low
       Closes: #220258
     - Fix a trivial spell error in pt_BR translation.
     - Fixed to not call the partitioner tool without a disk select.
+  * Thiemo Seufer
+    - Use always fdisk for mips.
 
  -- Bart Cornelis <cobaco@linux.be>  Fri, 19 Dec 2003 17:28:04 +0100
 
